# Classical_music_ai

./: Classical_music  README.md  pyproject.toml
src/classical_music_ai/: __init__.py  composition.py  harmony.py  main.py  midi.py  rhythm.py  theory.py
