[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "classical-music-ai"
version = "0.1.0"
description = "Theory-driven MIDI music generator."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["mido>=1.3.0"]

[project.scripts]
classical-music-ai = "classical_music_ai.main:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
